// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`IconFill props exists 1`] = `
<
  style={
    Array [
      Object {
        "color": "black",
        "fontFamily": "antfill",
        "fontSize": 24,
        "fontStyle": "normal",
        "fontWeight": "normal",
      },
      undefined,
    ]
  }
>
  
</>
`;

exports[`IconFill should create Icon element. 1`] = `
<
  style={
    Array [
      Object {
        "color": "black",
        "fontFamily": "antfill",
        "fontSize": 14,
        "fontStyle": "normal",
        "fontWeight": "normal",
      },
      undefined,
    ]
  }
>
  
</>
`;

exports[`IconFill should create fillGlyphMap 1`] = `
Object {
  "account-book": 57345,
  "alert": 57346,
  "alipay-circle": 57347,
  "alipay-square": 57348,
  "aliwangwang": 57349,
  "amazon-circle": 57350,
  "amazon-square": 57351,
  "android": 57352,
  "api": 57353,
  "apple": 57354,
  "appstore": 57355,
  "audio": 57356,
  "backward": 57357,
  "bank": 57358,
  "behance-circle": 57359,
  "behance-square": 57360,
  "bell": 57361,
  "book": 57362,
  "box-plot": 57363,
  "build": 57364,
  "bulb": 57365,
  "calculator": 57366,
  "calendar": 57367,
  "camera": 57368,
  "car": 57369,
  "caret-down": 57370,
  "caret-left": 57371,
  "caret-right": 57372,
  "caret-up": 57373,
  "carry-out": 57374,
  "check-circle": 57375,
  "check-square": 57376,
  "chrome": 57377,
  "ci-circle": 57378,
  "clock-circle": 57379,
  "close-circle": 57380,
  "close-square": 57381,
  "cloud": 57382,
  "code": 57385,
  "code-sandbox-circle": 57383,
  "code-sandbox-square": 57384,
  "codepen-circle": 57386,
  "codepen-square": 57387,
  "compass": 57388,
  "contacts": 57389,
  "container": 57390,
  "control": 57391,
  "copy": 57392,
  "copyright-circle": 57393,
  "credit-card": 57394,
  "crown": 57395,
  "customer-service": 57396,
  "dashboard": 57397,
  "database": 57398,
  "delete": 57399,
  "diff": 57400,
  "dingtalk-circle": 57401,
  "dingtalk-square": 57402,
  "dislike": 57403,
  "dollar-circle": 57404,
  "down-circle": 57405,
  "down-square": 57406,
  "dribbble-circle": 57407,
  "dribbble-square": 57408,
  "dropbox-circle": 57409,
  "dropbox-square": 57410,
  "edit": 57411,
  "environment": 57412,
  "euro-circle": 57413,
  "exclamation-circle": 57414,
  "experiment": 57415,
  "eye": 57417,
  "eye-invisible": 57416,
  "facebook": 57418,
  "fast-backward": 57419,
  "fast-forward": 57420,
  "file": 57432,
  "file-add": 57421,
  "file-excel": 57422,
  "file-exclamation": 57423,
  "file-image": 57424,
  "file-markdown": 57425,
  "file-pdf": 57426,
  "file-ppt": 57427,
  "file-text": 57428,
  "file-unknown": 57429,
  "file-word": 57430,
  "file-zip": 57431,
  "filter": 57433,
  "fire": 57434,
  "flag": 57435,
  "folder": 57438,
  "folder-add": 57436,
  "folder-open": 57437,
  "forward": 57439,
  "frown": 57440,
  "fund": 57441,
  "funnel-plot": 57442,
  "gift": 57443,
  "github": 57444,
  "gitlab": 57445,
  "golden": 57446,
  "google-circle": 57447,
  "google-plus-circle": 57448,
  "google-plus-square": 57449,
  "google-square": 57450,
  "hdd": 57451,
  "heart": 57452,
  "highlight": 57453,
  "home": 57454,
  "hourglass": 57455,
  "html5": 57456,
  "idcard": 57457,
  "ie-circle": 57458,
  "ie-square": 57459,
  "info-circle": 57460,
  "instagram": 57461,
  "insurance": 57462,
  "interation": 57463,
  "layout": 57464,
  "left-circle": 57465,
  "left-square": 57466,
  "like": 57467,
  "linkedin": 57468,
  "lock": 57469,
  "mail": 57470,
  "medicine-box": 57471,
  "medium-circle": 57472,
  "medium-square": 57473,
  "meh": 57474,
  "message": 57475,
  "minus-circle": 57476,
  "minus-square": 57477,
  "mobile": 57478,
  "money-collect": 57479,
  "notification": 57480,
  "pause-circle": 57481,
  "pay-circle": 57482,
  "phone": 57483,
  "picture": 57484,
  "pie-chart": 57485,
  "play-circle": 57486,
  "play-square": 57487,
  "plus-circle": 57488,
  "plus-square": 57489,
  "pound-circle": 57490,
  "printer": 57491,
  "profile": 57492,
  "project": 57493,
  "property-safety": 57494,
  "pushpin": 57495,
  "qq-circle": 57496,
  "qq-square": 57497,
  "question-circle": 57498,
  "read": 57499,
  "reconciliation": 57500,
  "red-envelope": 57501,
  "reddit-circle": 57502,
  "reddit-square": 57503,
  "rest": 57504,
  "right-circle": 57505,
  "right-square": 57506,
  "rocket": 57507,
  "safety-certificate": 57508,
  "save": 57509,
  "schedule": 57510,
  "security-scan": 57511,
  "setting": 57512,
  "shop": 57513,
  "shopping": 57514,
  "sketch-circle": 57515,
  "sketch-square": 57516,
  "skin": 57517,
  "skype": 57518,
  "slack-circle": 57519,
  "slack-square": 57520,
  "sliders": 57521,
  "smile": 57522,
  "snippets": 57523,
  "sound": 57524,
  "star": 57525,
  "step-backward": 57526,
  "step-forward": 57527,
  "stop": 57528,
  "switcher": 57529,
  "tablet": 57530,
  "tag": 57531,
  "tags": 57532,
  "taobao-circle": 57533,
  "taobao-square": 57534,
  "thunderbolt": 57535,
  "tool": 57536,
  "trademark-circle": 57537,
  "trophy": 57538,
  "twitter-circle": 57539,
  "twitter-square": 57540,
  "unlock": 57541,
  "up-circle": 57542,
  "up-square": 57543,
  "usb": 57544,
  "video-camera": 57545,
  "wallet": 57546,
  "warning": 57547,
  "wechat": 57548,
  "weibo-circle": 57549,
  "weibo-square": 57550,
  "windows": 57551,
  "yahoo": 57552,
  "youtube": 57553,
  "yuque": 57554,
  "zhihu-circle": 57555,
  "zhihu-square": 57556,
}
`;
